--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="description" content="Fidian Cakes and More - Fresh cakes, hot meals & snacks in Jos. Order now via WhatsApp!">
+    <meta name="description" content="Joe Div - Fresh cakes, hot meals & snacks in Jos. Order now via WhatsApp!">
     <meta name="keywords" content="cakes in Jos, snacks in Jos, order cake Jos, Fidian cakes, Jos delivery">
-    <meta name="author" content="Fidian Chops and More">
-    <meta property="og:title" content="Fidian Chops and More - Jos Bakery & Meals" />
+    <meta name="author" content="Joe Div">
+    <meta property="og:title" content="Joe Div - Jos Bakery & Meals" />
     <meta property="og:description" content="Order fresh cakes, snacks, and Nigerian meals from Fidian Chops and More. Fast delivery in Jos!" />
     <meta property="og:image" content="https://yourwebsite.com/img/1.png" />
     <meta property="og:url" content="https://yourwebsite.com" />
